# ds_ml_exercises

./: .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml  relase.config.js
.github/workflows/: release.yaml
video_game_sales/: README.md  game_sales.ipynb  game_sales_solution.ipynb  vgsales_new.csv
